--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,51 +15,58 @@
     android:orientation="vertical"
     android:weightSum="1">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:minHeight="@dimen/activity_vertical_margin"
-        android:gravity="center"
-        android:text="@string/tv_main_title"
-        android:textSize="9pt"
-        android:textColor="@color/colorPrimaryDark"
-        android:id="@+id/tv_main_title"
-        android:layout_weight="0.35" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <Button
-        style="@style/MainButton"
-        android:background="@color/colorAppButton"
-        android:text="@string/btn_spotify_streamer"
-        android:id="@+id/btn_spotify_streamer" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:text="@string/tv_main_title"
+            android:textSize="9pt"
+            android:textColor="@color/colorPrimaryDark"
+            android:id="@+id/tv_main_title"
+             />
 
-    <Button
-        style="@style/MainButton"
-        android:background="@color/colorAppButton"
-        android:text="@string/btn_scores_app"
-        android:id="@+id/btn_scores_app" />
+        <Button
+            style="@style/MainButton"
+            android:background="@color/colorAppButton"
+            android:text="@string/btn_spotify_streamer"
+            android:id="@+id/btn_spotify_streamer" />
 
-    <Button
-        style="@style/MainButton"
-        android:background="@color/colorAppButton"
-        android:text="@string/btn_library_app"
-        android:id="@+id/btn_library_app" />
+        <Button
+            style="@style/MainButton"
+            android:background="@color/colorAppButton"
+            android:text="@string/btn_scores_app"
+            android:id="@+id/btn_scores_app" />
 
-    <Button
-        style="@style/MainButton"
-        android:background="@color/colorAppButton"
-        android:text="@string/btn_build_it_bigger"
-        android:id="@+id/btn_build_it_bigger" />
+        <Button
+            style="@style/MainButton"
+            android:background="@color/colorAppButton"
+            android:text="@string/btn_library_app"
+            android:id="@+id/btn_library_app" />
 
-    <Button
-        style="@style/MainButton"
-        android:background="@color/colorAppButton"
-        android:text="@string/btn_xyz_reader"
-        android:id="@+id/btn_xyz_reader" />
+        <Button
+            style="@style/MainButton"
+            android:background="@color/colorAppButton"
+            android:text="@string/btn_build_it_bigger"
+            android:id="@+id/btn_build_it_bigger" />
 
-    <Button
-        style="@style/MainButton"
-        android:background="@color/colorCapstoneButton"
-        android:text="@string/btn_capstone"
-        android:id="@+id/btn_capstone" />
+        <Button
+            style="@style/MainButton"
+            android:background="@color/colorAppButton"
+            android:text="@string/btn_xyz_reader"
+            android:id="@+id/btn_xyz_reader" />
 
-</LinearLayout>
+        <Button
+            style="@style/MainButton"
+            android:background="@color/colorCapstoneButton"
+            android:text="@string/btn_capstone"
+            android:id="@+id/btn_capstone" />
+
+    </LinearLayout>
+
+</ScrollView>
